productpage/productpage.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: bookinfo
  labels:
    app: productpage
    service: productpage
spec:
  ports:
  - port: 9083
    name: http
    targetPort: 9083
  selector:
    app: productpage
  type: NodePort
---
# Productpage v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
  namespace: bookinfo
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
      - name: productpage
        image: villanel/bookinfo-productpage:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9083
---
# Productpage v2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v2
  namespace: bookinfo
  labels:
    app: productpage
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v2
  template:
    metadata:
      labels:
        app: productpage
        version: v2
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
      - name: productpage
        image: bookinfo/productpage:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9083
---
# Productpage version services
apiVersion: v1
kind: Service
metadata:
  name: productpage-v1
  namespace: bookinfo
spec:
  ports:
  - port: 9083
    name: http
  selector:
    app: productpage
    version: v1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: productpage-v2
  namespace: bookinfo
spec:
  ports:
  - port: 9083
    name: http
  selector:
    app: productpage
    version: v2
  type: ClusterIP
